# serializer version: 1
# name: test_list_example
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/example.json
          example-97db95eb
  
    ''',
  })
# ---
# name: test_list_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_invalid_target_skip_invalid
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      [PROJECT_ROOT]/scenarios/example.json
          example-97db95eb
  
    ''',
  })
# ---
# name: test_list_no_sources
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      requires-package-does-not-exist-57cd4136
      requires-exact-version-does-not-exist-eaa03067
      requires-greater-version-does-not-exist-6e8e01df
      requires-less-version-does-not-exist-e45cec3c
      transitive-requires-package-does-not-exist-aca2796a
      example-97db95eb
      excluded-only-version-7a9ed79c
      excluded-only-compatible-version-d28c9e3c
      dependency-excludes-range-of-compatible-versions-2023222f
      dependency-excludes-non-contiguous-range-of-compatible-versions-aece4208
      direct-incompatible-versions-80d82ee8
      transitive-incompatible-with-root-version-a967e815
      transitive-incompatible-with-transitive-6866d8dc
      package-only-prereleases-9a1b3dda
      package-only-prereleases-in-range-19673198
      requires-package-only-prereleases-in-range-global-opt-in-51f94da2
      requires-package-prerelease-and-final-any-eebe53a6
      package-prerelease-specified-only-final-available-9d4725eb
      package-prerelease-specified-only-prerelease-available-6cc95bc8
      package-prerelease-specified-mixed-available-c97845e2
      package-multiple-prereleases-kinds-e290bf29
      package-multiple-prereleases-numbers-f5948c28
      transitive-package-only-prereleases-44ebef16
      transitive-package-only-prereleases-in-range-27759187
      transitive-package-only-prereleases-in-range-opt-in-26efb6c5
      transitive-prerelease-and-stable-dependency-c7ad0310
      transitive-prerelease-and-stable-dependency-opt-in-a05f7cb8
      transitive-prerelease-and-stable-dependency-many-versions-02ae765c
      transitive-prerelease-and-stable-dependency-many-versions-holes-ef9ce80f
      requires-python-version-does-not-exist-0825b69c
      requires-python-version-less-than-current-f9296b84
      requires-python-version-greater-than-current-a11d5394
      requires-python-version-greater-than-current-many-02dc550c
      requires-python-version-greater-than-current-backtrack-ef060cef
      requires-python-version-greater-than-current-excluded-1bde0c18
      specific-tag-and-default-74e4a459
      only-wheels-4f019491
      no-wheels-614d801c
      no-wheels-with-matching-platform-737bbfd4
  
    ''',
  })
# ---
# name: test_list_no_target_finds_all_valid_scenarios
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/does-not-exist.json
          requires-package-does-not-exist-57cd4136
          requires-exact-version-does-not-exist-eaa03067
          requires-greater-version-does-not-exist-6e8e01df
          requires-less-version-does-not-exist-e45cec3c
          transitive-requires-package-does-not-exist-aca2796a
      scenarios/example.json
          example-97db95eb
      scenarios/excluded.json
          excluded-only-version-7a9ed79c
          excluded-only-compatible-version-d28c9e3c
          dependency-excludes-range-of-compatible-versions-2023222f
          dependency-excludes-non-contiguous-range-of-compatible-versions-aece4208
      scenarios/incompatible-versions.json
          direct-incompatible-versions-80d82ee8
          transitive-incompatible-with-root-version-a967e815
          transitive-incompatible-with-transitive-6866d8dc
      scenarios/prereleases.json
          package-only-prereleases-9a1b3dda
          package-only-prereleases-in-range-19673198
          requires-package-only-prereleases-in-range-global-opt-in-51f94da2
          requires-package-prerelease-and-final-any-eebe53a6
          package-prerelease-specified-only-final-available-9d4725eb
          package-prerelease-specified-only-prerelease-available-6cc95bc8
          package-prerelease-specified-mixed-available-c97845e2
          package-multiple-prereleases-kinds-e290bf29
          package-multiple-prereleases-numbers-f5948c28
          transitive-package-only-prereleases-44ebef16
          transitive-package-only-prereleases-in-range-27759187
          transitive-package-only-prereleases-in-range-opt-in-26efb6c5
          transitive-prerelease-and-stable-dependency-c7ad0310
          transitive-prerelease-and-stable-dependency-opt-in-a05f7cb8
          transitive-prerelease-and-stable-dependency-many-versions-02ae765c
          transitive-prerelease-and-stable-dependency-many-versions-holes-ef9ce80f
      scenarios/requires-python.json
          requires-python-version-does-not-exist-0825b69c
          requires-python-version-less-than-current-f9296b84
          requires-python-version-greater-than-current-a11d5394
          requires-python-version-greater-than-current-many-02dc550c
          requires-python-version-greater-than-current-backtrack-ef060cef
          requires-python-version-greater-than-current-excluded-1bde0c18
      scenarios/wheels.json
          specific-tag-and-default-74e4a459
          only-wheels-4f019491
          no-wheels-614d801c
          no-wheels-with-matching-platform-737bbfd4
  
    ''',
  })
# ---
# name: test_list_no_versions
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/does-not-exist.json
          requires-package-does-not-exist
          requires-exact-version-does-not-exist
          requires-greater-version-does-not-exist
          requires-less-version-does-not-exist
          transitive-requires-package-does-not-exist
      scenarios/example.json
          example
      scenarios/excluded.json
          excluded-only-version
          excluded-only-compatible-version
          dependency-excludes-range-of-compatible-versions
          dependency-excludes-non-contiguous-range-of-compatible-versions
      scenarios/incompatible-versions.json
          direct-incompatible-versions
          transitive-incompatible-with-root-version
          transitive-incompatible-with-transitive
      scenarios/prereleases.json
          package-only-prereleases
          package-only-prereleases-in-range
          requires-package-only-prereleases-in-range-global-opt-in
          requires-package-prerelease-and-final-any
          package-prerelease-specified-only-final-available
          package-prerelease-specified-only-prerelease-available
          package-prerelease-specified-mixed-available
          package-multiple-prereleases-kinds
          package-multiple-prereleases-numbers
          transitive-package-only-prereleases
          transitive-package-only-prereleases-in-range
          transitive-package-only-prereleases-in-range-opt-in
          transitive-prerelease-and-stable-dependency
          transitive-prerelease-and-stable-dependency-opt-in
          transitive-prerelease-and-stable-dependency-many-versions
          transitive-prerelease-and-stable-dependency-many-versions-holes
      scenarios/requires-python.json
          requires-python-version-does-not-exist
          requires-python-version-less-than-current
          requires-python-version-greater-than-current
          requires-python-version-greater-than-current-many
          requires-python-version-greater-than-current-backtrack
          requires-python-version-greater-than-current-excluded
      scenarios/wheels.json
          specific-tag-and-default
          only-wheels
          no-wheels
          no-wheels-with-matching-platform
  
    ''',
  })
# ---
# name: test_list_one_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_list_short_names
  dict({
    'exit_code': 0,
    'stderr': '',
    'stdout': '''
      scenarios/does-not-exist.json
          s57cd4136
          seaa03067
          s6e8e01df
          se45cec3c
          saca2796a
      scenarios/example.json
          s97db95eb
      scenarios/excluded.json
          s7a9ed79c
          sd28c9e3c
          s2023222f
          saece4208
      scenarios/incompatible-versions.json
          s80d82ee8
          sa967e815
          s6866d8dc
      scenarios/prereleases.json
          s9a1b3dda
          s19673198
          s51f94da2
          seebe53a6
          s9d4725eb
          s6cc95bc8
          sc97845e2
          se290bf29
          sf5948c28
          s44ebef16
          s27759187
          s26efb6c5
          sc7ad0310
          sa05f7cb8
          s02ae765c
          sef9ce80f
      scenarios/requires-python.json
          s0825b69c
          sf9296b84
          sa11d5394
          s02dc550c
          sef060cef
          s1bde0c18
      scenarios/wheels.json
          s74e4a459
          s4f019491
          s614d801c
          s737bbfd4
  
    ''',
  })
# ---
# name: test_list_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
